--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,21 @@
-beautifulsoup4==4.8.2
-certifi==2019.11.28
+beautifulsoup4==4.9.3
+certifi==2020.12.5
 chardet==3.0.4
-click==7.1.1
-Flask==1.1.1
-Flask-SQLAlchemy==2.4.1
-GoogleNews==1.3.4
-idna==2.9
+click==7.1.2
+cssmin==0.2.0
+Flask==1.1.2
+Flask-Assets==2.0
+Flask-Mako==0.4
+Flask-SQLAlchemy==2.4.4
+idna==2.10
 itsdangerous==1.1.0
-Jinja2==2.11.1
+Jinja2==2.11.2
+jsmin==2.2.2
+Mako==1.1.3
 MarkupSafe==1.1.1
-requests==2.23.0
-soupsieve==2.0
-SQLAlchemy==1.3.14
-urllib3==1.25.8
-Werkzeug==1.0.0
+requests==2.25.0
+soupsieve==2.1
+SQLAlchemy==1.3.20
+urllib3==1.26.2
+webassets==2.0
+Werkzeug==1.0.1
