--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,45 @@
+alembic==1.4.3
+aniso8601==8.1.0
 beautifulsoup4==4.9.3
+blinker==1.4
 certifi==2020.12.5
 chardet==3.0.4
 click==7.1.2
 cssmin==0.2.0
+dnspython==2.0.0
+email-validator==1.1.2
 Flask==1.1.2
 Flask-Assets==2.0
+Flask-JWT-Extended==3.25.0
+Flask-Mail==0.9.1
 Flask-Mako==0.4
+Flask-Migrate==2.5.3
+flask-oidc==1.4.0
+Flask-RESTful==0.3.8
 Flask-SQLAlchemy==2.4.4
+httplib2==0.18.1
 idna==2.10
 itsdangerous==1.1.0
 Jinja2==2.11.2
 jsmin==2.2.2
 Mako==1.1.3
 MarkupSafe==1.1.1
+mysqlclient @ file:///C:/Users/czemb/Downloads/mysqlclient-1.4.6-cp38-cp38-win32.whl
+oauth2client==4.1.3
+passlib==1.7.4
+psycopg2==2.8.6
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+PyJWT==1.7.1
+python-dateutil==2.8.1
+python-editor==1.0.4
+pytz==2020.4
 requests==2.25.0
+rsa==4.6
+six==1.15.0
 soupsieve==2.1
 SQLAlchemy==1.3.20
 urllib3==1.26.2
 webassets==2.0
 Werkzeug==1.0.1
+WTForms==2.3.3
