app config example refactor

--- a/contentagregator/app_config_example.ini
+++ b/contentagregator/app_config_example.ini
@@ -1,7 +1,16 @@
-[USER]
+[DATABASE]
 login = 
 password = 
-
-[DATABASE]
 url = 
 db = 
+
+[MAIL]
+username =
+password =
+mail_default_sender = 
+mail_sender = 
+mail_receiver = 
+
+[SECRETS]
+secret_key = 
+jwt_secret_key = 
