--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,4 @@ __pycache__
 venv/
 .webassets-cache
 app_config.ini
-mysqlclient-1.4.6-cp38-cp38-win32.whl
-Dockerfile
-.dockerignore
+migrations_old/
