--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,19 @@
 alembic==1.4.3
+amqp==5.0.2
 aniso8601==8.1.0
 Authlib==0.15.2
 beautifulsoup4==4.9.3
+billiard==3.6.3.0
 blinker==1.4
 cachetools==4.2.0
+celery==5.0.5
 certifi==2020.12.5
 cffi==1.14.4
 chardet==3.0.4
 click==7.1.2
+click-didyoumean==0.0.3
+click-plugins==1.1.1
+click-repl==0.1.6
 cryptography==3.3.1
 cssmin==0.2.0
 dnspython==2.0.0
@@ -19,9 +25,11 @@ Flask-JWT-Extended==3.25.0
 Flask-Login==0.5.0
 Flask-Mail==0.9.1
 Flask-Mako==0.4
+flask-marshmallow==0.14.0
 Flask-Migrate==2.5.3
 flask-oidc==1.4.0
 Flask-RESTful==0.3.8
+Flask-Seeder==1.2.0
 Flask-SQLAlchemy==2.4.4
 Flask-Testing==0.8.1
 google-api-core==1.24.1
@@ -35,14 +43,18 @@ idna==2.10
 itsdangerous==1.1.0
 Jinja2==2.11.2
 jsmin==2.2.2
+kombu==5.0.2
 libsass==0.20.1
 Mako==1.1.3
 MarkupSafe==1.1.1
+marshmallow==3.10.0
+marshmallow-sqlalchemy==0.24.1
 oauth2client==4.1.3
 oauthlib==3.1.0
 passlib==1.7.4
+prompt-toolkit==3.0.10
 protobuf==3.14.0
-psycopg2-binary==2.8.5
+psycopg2==2.8.6
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycparser==2.20
@@ -51,7 +63,7 @@ pyOpenSSL==20.0.1
 python-dateutil==2.8.1
 python-editor==1.0.4
 pytz==2020.4
-# pywin32==227
+pywin32==227
 requests==2.25.0
 rsa==4.6
 six==1.15.0
@@ -59,6 +71,8 @@ soupsieve==2.1
 SQLAlchemy==1.3.20
 uritemplate==3.0.1
 urllib3==1.26.2
+vine==5.0.0
+wcwidth==0.2.5
 webassets==2.0
 websocket-client==0.57.0
 Werkzeug==1.0.1
