--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ email-validator==1.1.2
 Flask==1.1.2
 Flask-Assets==2.0
 Flask-JWT-Extended==3.25.0
+Flask-Language==0.1.0
 Flask-Login==0.5.0
 Flask-Mail==0.9.1
 Flask-Mako==0.4
