--- a/contentagregator/app_config.ini
+++ b/contentagregator/app_config.ini
@@ -5,16 +5,16 @@ url = localhost
 db = redactorzone_test
 
 [MAIL]
-username = czembri@gmail.com
-password = Zxd98zcA16@11
-mail_default_sender = czembri@gmail.com
-mail_sender = czembri@gmail.com
-mail_receiver = gildartsft16@gmail.com
+username = test@gmail.com
+password = test
+mail_default_sender = test@gmail.com
+mail_sender = test@gmail.com
+mail_receiver = test2@gmail.com
 
 [SECRETS]
 secret_key = 1234
 jwt_secret_key = jwt_secret_key
 
 [GOOGLE]
-google_client_id = 1086803948939-lb8c3ji3jmnar76d4j2t4j82rgai6vkm.apps.googleusercontent.com
-google_client_secret = xw-3lrjorYu0GoU72GYLsdOu
+google_client_id = someid
+google_client_secret = secret
