--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ alembic==1.4.3
 amqp==5.0.2
 aniso8601==8.1.0
 Authlib==0.15.2
+Babel==2.9.0
 beautifulsoup4==4.9.3
 billiard==3.6.3.0
 blinker==1.4
@@ -21,7 +22,9 @@ docker==4.4.1
 email-validator==1.1.2
 Flask==1.1.2
 Flask-Assets==2.0
+Flask-Babel==2.0.0
 Flask-JWT-Extended==3.25.0
+Flask-Language==0.1.0
 Flask-Login==0.5.0
 Flask-Mail==0.9.1
 Flask-Mako==0.4
@@ -63,7 +66,6 @@ pyOpenSSL==20.0.1
 python-dateutil==2.8.1
 python-editor==1.0.4
 pytz==2020.4
-pywin32==227
 requests==2.25.0
 rsa==4.6
 six==1.15.0
