--- a/jenkinsfile
+++ b/jenkinsfile
@@ -6,6 +6,10 @@ pipeline {
                 sh 'pip install -r requirements.txt'
             }
         }
+        stage('upgradedb') {
+            steps {
+                sh 'flask db upgrade'
+            }
         stage('test') {
             steps {
                 sh 'python -m unittest discover'
