tests update posts and languages api

--- a/contentagregator/app_config.ini
+++ b/contentagregator/app_config.ini
@@ -2,7 +2,7 @@
 login = postgres
 password = root
 url = localhost
-db = redactorzone_test
+db = contentagregator_dev
 
 [MAIL]
 username = test@gmail.com
