Revert "tests update posts and languages api"
This reverts commit f9da6287d758e98e06a8c3b5863efd2cb4c0bbb7.

--- a/contentagregator/app_config.ini
+++ b/contentagregator/app_config.ini
@@ -2,7 +2,7 @@
 login = postgres
 password = root
 url = localhost
-db = contentagregator_dev
+db = redactorzone_test
 
 [MAIL]
 username = test@gmail.com
