--- a/jenkinsfile
+++ b/jenkinsfile
@@ -3,12 +3,9 @@ pipeline {
   stages {
     stage('build') {
       steps {
+        sh 'export FLASK_APP=run.py'
+        sh  'python -m flask db upgrade'
         sh 'pip install -r requirements.txt'
-      }
-    }
-    stage('upgrade_db') {
-      steps {
-        sh 'flask db upgrade'
       }
     }
     stage('test') {
