--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,6 +1,12 @@
 pipeline {
   agent { docker { image 'python:3.8.5' } }
   stages {
+    stage('env') {
+      steps {
+        sh 'python -m venv venv'
+        sh 'source venv\bin\activate'
+      }
+    }
     stage('build') {
       steps {
         sh 'pip install -r requirements.txt'
