--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ beautifulsoup4==4.9.3
 billiard==3.6.3.0
 blinker==1.4
 cachetools==4.2.0
-celery==5.0.5
+celery
 certifi==2020.12.5
 cffi==1.14.4
 chardet==3.0.4
@@ -14,10 +14,10 @@ click==7.1.2
 click-didyoumean==0.0.3
 click-plugins==1.1.1
 click-repl==0.1.6
-cryptography==3.3.2
+cryptography
 cssmin==0.2.0
 dnspython==2.0.0
-docker==4.4.1
+docker
 email-validator==1.1.2
 Flask==1.1.2
 Flask-Assets==2.0
@@ -43,7 +43,7 @@ httplib2==0.19.0
 idna==2.10
 itsdangerous==1.1.0
 Jinja2==2.11.2
-jsmin==2.2.2
+jsmin
 kombu==5.0.2
 libsass==0.20.1
 Mako==1.1.3
@@ -77,3 +77,4 @@ webassets==2.0
 websocket-client==0.57.0
 Werkzeug==1.0.1
 WTForms==2.3.3
+importlib-metadata==4.13.0
